--- a/templates/word_wizard_oneresult.mustache
+++ b/templates/word_wizard_oneresult.mustache
@@ -1,7 +1,7 @@
 <div class="mod_wordcards_word_wizard_oneresult" id="{{uniqid}}_oneresult">
     <fieldset class="mod_wordcards_ww_fieldset border p-2">
         <legend class="w-auto">{{term}}</legend>
-        <div class="container">
+        <div class="container ml-0">
             <div class="row">
             {{#nosenses}}
                 <div class="col-sm mod_wordcards_ww_onesense" id="{{uniqid}}_0_onesense">
@@ -10,10 +10,10 @@
             {{/nosenses}}
             {{#senses}}
                 <div class="col-sm-4 mod_wordcards_ww_onesense" id="{{uniqid}}_{{senseindex}}_onesense">
-                    <div class="mod_wordcards_ww_sourcedef">{{sourcedefinition}}</div>
+                    <!-- div class="mod_wordcards_ww_sourcedef">{{sourcedefinition}}</div -->
                     <span style="display: none" class="mod_wordcards_ww_trans">{{translations}}</span>
-                    <label class="mod_wordcards_ww_label">{{#str}}shortdefinition, mod_wordcards {{/str}}</label><input type="text" class="mod_wordcards_ww_def" value="{{definition}}"><br>
-                    <label class="mod_wordcards_ww_label">{{#str}}model, mod_wordcards {{/str}}</label><input type="text" class="mod_wordcards_ww_modelsentence" value="{{modelsentence}}"><br>
+                    <label class="mod_wordcards_ww_label">{{#str}}definition, mod_wordcards {{/str}}</label><input type="text" class="mod_wordcards_ww_def" value="{{definition}}"><br>
+                    <label class="mod_wordcards_ww_label">{{#str}}model_sentence, mod_wordcards {{/str}}</label><textarea class="mod_wordcards_ww_modelsentence" rows="3" >{{modelsentence}}</textarea><br>
                     <button class="mod_wordcards_ww_use {{uniqid}}_usebutton" data-senseindex="{{senseindex}}" type='button'>{{#str}}use, mod_wordcards {{/str}}</button>
                     <button class="mod_wordcards_ww_dismiss {{uniqid}}_dismissbutton" data-senseindex="{{senseindex}}" type='button'>{{#str}}dismiss, mod_wordcards {{/str}}</button>
                 </div>
