--- a/templates/definitions_page.mustache
+++ b/templates/definitions_page.mustache
@@ -66,6 +66,7 @@
                 {{{definition}}}
              </div>
           </div>
+
        </div>
        {{/definitions}}
     </div>
@@ -75,31 +76,48 @@
           <ul class="definition_flashcards_ul">
              {{#definitions}}
              <li>
-                <div class="row">
-                   {{#image}}
-                   <div class="col-md-6">
-                      <img src="{{image}}" class="flash_img" alt=""/>
-                   </div>
-                   {{/image}}
-                   <div class="{{#image}}col-md-6{{/image}} {{^image}}col-md-12{{/image}}">
-                      <div class="term-wrapper {{#image}}add_wraper_handle_im{{/image}} {{^image}}add_wraper_handle{{/image}}">
-                         <div class="term {{#seen}}term-seen{{/seen}}" data-termid="{{id}}">
-                            <div class="term-header">
-                                {{>mod_wordcards/my_words_button}}
-                               <div class="term-title">{{term}} <i style="cursor:pointer;" data-modelaudio="{{audio}}" data-tts="{{term}}" data-ttsvoice="{{ttsvoice}}" class="fa fa-volume-up definition-play-tts"></i></div>
-                               {{#model_sentence}}
-                               <div class="term-modelsentence">
-                                  <span style="cursor:pointer;" data-modelaudio="{{model_sentence_audio}}" data-tts="{{model_sentence}}" data-ttsvoice="{{ttsvoice}}" class="model-sentence-play-tts"> {{model_sentence}}</span>
-                               </div>
-                               {{/model_sentence}}
-                            </div>
-                            <div class="term-body">
-                                {{{definition}}}
-                            </div>
-                         </div>
-                      </div>
-                   </div>
-                </div>
+                <div class="wc-faces">
+                    <!-- face 1 -->
+                    <div data-face="one">
+                        <div class="row">
+                           {{#image}}
+                           <div class="col-md-6">
+                              <img src="{{image}}" class="flash_img" alt=""/>
+                           </div>
+                           {{/image}}
+                           <div class="{{#image}}col-md-6{{/image}} {{^image}}col-md-12{{/image}}">
+                              <div class="term-wrapper {{#image}}add_wraper_handle_im{{/image}} {{^image}}add_wraper_handle{{/image}}">
+                                 <div class="term {{#seen}}term-seen{{/seen}}" data-termid="{{id}}">
+                                    <div class="term-header">
+                                        {{>mod_wordcards/my_words_button}}
+                                       <div class="term-title">{{term}} <i style="cursor:pointer;" data-modelaudio="{{audio}}" data-tts="{{term}}" data-ttsvoice="{{ttsvoice}}" class="fa fa-volume-up definition-play-tts"></i></div>
+                                       {{#model_sentence}}
+                                       <div class="term-modelsentence">
+                                          <span style="cursor:pointer;" data-modelaudio="{{model_sentence_audio}}" data-tts="{{model_sentence}}" data-ttsvoice="{{ttsvoice}}" class="model-sentence-play-tts"> {{model_sentence}}</span>
+                                       </div>
+                                       {{/model_sentence}}
+                                    </div>
+                                    <div class="term-body">
+                                        {{{definition}}}
+                                    </div>
+                                 </div>
+                              </div>
+                           </div>
+                        </div>
+                    </div>
+                     <!-- face 2 -->
+                     <div data-face="two" style="border: 1px solid grey; display:none;">
+                        <div class="term" data-termid="{{id}}">
+                            <div class="term-title">{{term}} FACE 2</div>
+                        </div>
+                     </div>
+                     <!-- face 3 -->
+                     <div data-face="three" style="border: 1px solid grey; display:none;">
+                        <div class="term" data-termid="{{id}}" >
+                             <div class="term-title">{{term}} FACE 3</div>
+                        </div>
+                     </div>
+                 </div>
              </li>
              {{/definitions}}
           </ul>
