removed stray debug message

--- a/templates/definitions_page.mustache
+++ b/templates/definitions_page.mustache
@@ -80,7 +80,7 @@
                       <!-- face 1 -->
                      <div data-face="term" style="border: 1px solid grey; ">
                         <div class="term" data-termid="{{id}}">
-                            <div class="term-title">{{term}} FACE 2</div>
+                            <div class="term-title">{{term}}</div>
                              {{#model_sentence}}
                                <div class="term-modelsentence">
                                   <span style="cursor:pointer;" data-modelaudio="{{model_sentence_audio}}" data-tts="{{model_sentence}}" data-ttsvoice="{{ttsvoice}}" class="model-sentence-play-tts"> {{model_sentence}}</span>
