Flip behaviour integrated via the jQuery previous logic -styles pending

--- a/templates/definitions_page.mustache
+++ b/templates/definitions_page.mustache
@@ -75,10 +75,10 @@
        <div class="df_fl">
           <ul class="definition_flashcards_ul">
              {{#definitions}}
-             <li>
-                <div class="wc-faces">
-                      <!-- face 1 -->
-                     <div data-face="term" style="border: 1px solid grey; ">
+             <li class="flip-card">
+                <div class="wc-faces flip-card-inner">
+                      <!-- front face -->
+                     <div class="flip-card-front" data-face="term">
                         <div class="term" data-termid="{{id}}">
                             <div class="term-title">{{term}}</div>
                              {{#model_sentence}}
@@ -89,7 +89,7 @@
                         </div>
                      </div>
                     <!-- back face -->
-                    <div data-face="details" style="display:none;">
+                    <div class="flip-card-back" data-face="details">
                         <div class="row">
                            <div class="col-md-12">
                               <div class="term-wrapper {{#image}}add_wraper_handle_im{{/image}} {{^image}}add_wraper_handle{{/image}}">
