--- a/templates/definitions_page.mustache
+++ b/templates/definitions_page.mustache
@@ -34,7 +34,8 @@
         {{/introstrings}}
     </div>
 </div>
-<div class="text-right mt-2">
+
+<!--div class="text-right mt-2">
         <span class="wordcards_display_options">
             <button class="wordcards_display_option event_grid btn btn-primary" id="btn" title="{{#str}}grid, mod_wordcards{{/str}}">
                 <i class="fa fa-th"></i>
@@ -43,7 +44,8 @@
                 <i class="fa fa-clone"></i>
             </button>
         </span>
-</div>
+</div-->
+
 <div id="definitions-page-{{uniqid}}" class="definitions-container">
     <div class="mt-3">
     <div class="terms clearfix definition_grid">
@@ -70,7 +72,7 @@
        </div>
        {{/definitions}}
     </div>
-    <div class="terms clearfix definition_flashcards" style="display:none;">
+    <div class="terms clearfix definition_flashcards">
        <!--start --->
        <div class="df_fl">
           <ul class="definition_flashcards_ul">
