--- a/templates/definitions_page.mustache
+++ b/templates/definitions_page.mustache
@@ -81,18 +81,16 @@
                 <div class="wc-faces flip-card-inner">
                       <!-- front face -->
                      <div class="flip-card-front" data-face="term">
+                        {{>mod_wordcards/my_words_button}}
                         <div class="term" data-termid="{{id}}">
                            <div class="term-title">{{term}}</div>
                            <i id="card-audio" style="cursor:pointer;" data-modelaudio="{{audio}}" data-tts="{{term}}" data-ttsvoice="{{ttsvoice}}" class="fa fa-volume-up definition-play-tts"></i>
-                           {{#image}}
-                              <div class="term-image">
-                                 <img src="{{image}}" class="flash_img" alt=""/>
-                              </div>
-                           {{/image}}
-                           <!--div class="testing-event-click">
-                                  
-                           </div-->
                         </div>
+                        {{#image}}
+                           <div class="term-image">
+                              <img src="{{image}}" class="flash_img" alt=""/>
+                           </div>
+                        {{/image}}
                      </div>
                     <!-- back face -->
                     <div class="flip-card-back" data-face="details">
@@ -119,12 +117,13 @@
              </li>
              {{/definitions}}
           </ul>
+         <div class="df_fl_control" style="text-align: center;">
+             <button id="Prev"  style="float: left;" title="Prev"></button>
+             <button id="Next" style="float: right;" title="Next"></button>
           </div>
-          <div class="df_fl_control" style="text-align: center;">
-             <button id="Prev"  style="float: left;" title="Prev"> <i class="text-primary fa fa-angle-double-left" aria-hidden="true"></i> </button>
-              <span class="wc_cardsprogress"> -- / -- </span>
-             <button id="Next" style="float: right;" title="Next"> <i class="text-primary fa fa-angle-double-right" aria-hidden="true"></i></button>
+          <div class="wc_cardsprogress"> -- / -- </div>
           </div>
+
           <!--end --->
        </div>
        <div class="page-footer">
