--- a/templates/definitions_page.mustache
+++ b/templates/definitions_page.mustache
@@ -73,56 +73,48 @@
        {{/definitions}}
     </div>
     <div class="terms clearfix definition_flashcards">
-       <!--start --->
-       <div class="df_fl">
-          <ul class="definition_flashcards_ul">
-             {{#definitions}}
-             <li class="flip-card">
-                <div class="wc-faces flip-card-inner">
-                      <!-- front face -->
-                     <div class="flip-card-front" data-face="term">
-                        {{>mod_wordcards/my_words_button}}
-                        <div class="term" data-termid="{{id}}">
-                           <div class="term-title">{{term}}</div>
-                           <i id="card-audio" style="cursor:pointer;" data-modelaudio="{{audio}}" data-tts="{{term}}" data-ttsvoice="{{ttsvoice}}" class="fa fa-volume-up definition-play-tts"></i>
-                        </div>
-                        {{#image}}
-                           <div class="term-image">
-                              <img src="{{image}}" class="flash_img" alt=""/>
-                           </div>
-                        {{/image}}
-                     </div>
-                    <!-- back face -->
-                    <div class="flip-card-back" data-face="details">
-                        <div class="row">
-                           <div class="col-md-12">
-                              <div class="term-wrapper {{#image}}add_wraper_handle_im{{/image}} {{^image}}add_wraper_handle{{/image}}">
-                                 <div class="term {{#seen}}term-seen{{/seen}}" data-termid="{{id}}">
-                                    <div class="term-header">
-                                        {{>mod_wordcards/my_words_button}}
-                                       
-                                       <div class="term-body">
-                                           {{{definition}}}
-                                       </div>
-                                    </div>
-                                    <div class="term-video">
-                                          {{>mod_wordcards/youglish}}
-                                    </div>
-                                 </div>
-                              </div>
-                           </div>
-                        </div>
-                    </div>
-                 </div>
-             </li>
-             {{/definitions}}
-          </ul>
+      <!--start --->
+      <div class="df_fl">
          <div class="df_fl_control" style="text-align: center;">
              <button id="Prev"  style="float: left;" title="Prev"></button>
              <button id="Next" style="float: right;" title="Next"></button>
-          </div>
-          <div class="wc_cardsprogress"> -- / -- </div>
-          </div>
+         </div>
+         <ul class="definition_flashcards_ul">
+            {{#definitions}}
+            <li class="flip-card">
+               <div class="wc-faces flip-card-inner">
+                  <!-- front face -->
+                  <div class="flip-card-front" data-face="term">
+                     {{>mod_wordcards/my_words_button}}
+                     <div class="term" data-termid="{{id}}">
+                        <div class="term-title">{{term}}</div>
+                        <i id="card-audio" style="cursor:pointer;" data-modelaudio="{{audio}}" data-tts="{{term}}" data-ttsvoice="{{ttsvoice}}" class="fa fa-volume-up definition-play-tts"></i>
+                     </div>
+                     {{#image}}
+                        <div class="term-image">
+                           <img src="{{image}}" class="flash_img" alt=""/>
+                        </div>
+                     {{/image}}
+                  </div>
+                  <!-- back face -->
+                  <div class="flip-card-back" data-face="details">
+                     {{>mod_wordcards/my_words_button}}
+                     <div class="term {{#seen}}term-seen{{/seen}}" data-termid="{{id}}">
+                        <div class="term-title">
+                           {{{definition}}}
+                        </div>
+                        <div class="blackbox"></div>
+                        <div class="term-video">
+                           {{>mod_wordcards/youglish}}
+                        </div>
+                     </div>
+                  </div>
+               </div>
+            </li>
+            {{/definitions}}
+         </ul>
+         <div class="wc_cardsprogress"> -- / -- </div>
+         </div>
 
           <!--end --->
        </div>
