--- a/templates/youglish.mustache
+++ b/templates/youglish.mustache
@@ -1,1 +1,1 @@
-<div class="youglish-placeholder" data-term="{{term}}" style="width: 48px;height: 37px;background-color: #1f67a8; color: #FFFFFF; text-align: center; margin: auto; line-height: 370px;" >{{term}}</div>
+<div class="youglish-placeholder" data-term="{{term}}"></div>
